// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BridgeStatusController constructor rehydrates the tx history state 1`] = `
Object {
  "bridgeTxMetaId1": Object {
    "account": "0xaccount1",
    "approvalTxId": undefined,
    "estimatedProcessingTimeInSeconds": 15,
    "hasApprovalTx": false,
    "initialDestAssetBalance": undefined,
    "isStxEnabled": false,
    "pricingData": Object {
      "amountSent": "1.234",
      "amountSentInUsd": undefined,
      "quotedGasInUsd": undefined,
      "quotedReturnInUsd": undefined,
    },
    "quote": Object {
      "bridgeId": "lifi",
      "bridges": Array [
        "across",
      ],
      "destAsset": Object {
        "address": "0x0000000000000000000000000000000000000000",
        "assetId": "eip155:10/slip44:60",
        "chainId": 10,
        "coinKey": "ETH",
        "decimals": 18,
        "icon": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
        "logoURI": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
        "name": "ETH",
        "priceUSD": "2478.63",
        "symbol": "ETH",
      },
      "destChainId": 10,
      "destTokenAmount": "990654755978612",
      "feeData": Object {
        "metabridge": Object {
          "amount": "8750000000000",
          "asset": Object {
            "address": "0x0000000000000000000000000000000000000000",
            "assetId": "eip155:42161/slip44:60",
            "chainId": 42161,
            "coinKey": "ETH",
            "decimals": 18,
            "icon": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
            "logoURI": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
            "name": "ETH",
            "priceUSD": "2478.7",
            "symbol": "ETH",
          },
        },
      },
      "requestId": "197c402f-cb96-4096-9f8c-54aed84ca776",
      "srcAsset": Object {
        "address": "0x0000000000000000000000000000000000000000",
        "assetId": "eip155:42161/slip44:60",
        "chainId": 42161,
        "coinKey": "ETH",
        "decimals": 18,
        "icon": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
        "logoURI": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
        "name": "ETH",
        "priceUSD": "2478.7",
        "symbol": "ETH",
      },
      "srcChainId": 42161,
      "srcTokenAmount": "991250000000000",
      "steps": Array [
        Object {
          "action": "bridge",
          "destAmount": "990654755978612",
          "destAsset": Object {
            "address": "0x0000000000000000000000000000000000000000",
            "assetId": "eip155:10/slip44:60",
            "chainId": 10,
            "coinKey": "ETH",
            "decimals": 18,
            "icon": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
            "logoURI": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
            "name": "ETH",
            "priceUSD": "2478.63",
            "symbol": "ETH",
          },
          "destChainId": 10,
          "protocol": Object {
            "displayName": "Across",
            "icon": "https://raw.githubusercontent.com/lifinance/types/main/src/assets/icons/bridges/acrossv2.png",
            "name": "across",
          },
          "srcAmount": "991250000000000",
          "srcAsset": Object {
            "address": "0x0000000000000000000000000000000000000000",
            "assetId": "eip155:42161/slip44:60",
            "chainId": 42161,
            "coinKey": "ETH",
            "decimals": 18,
            "icon": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
            "logoURI": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
            "name": "ETH",
            "priceUSD": "2478.7",
            "symbol": "ETH",
          },
          "srcChainId": 42161,
        },
      ],
    },
    "slippagePercentage": 0,
    "startTime": 1729964825189,
    "status": Object {
      "srcChain": Object {
        "chainId": 42161,
        "txHash": "0xsrcTxHash1",
      },
      "status": "PENDING",
    },
    "targetContractAddress": "0x23981fC34e69eeDFE2BD9a0a9fCb0719Fe09DbFC",
    "txMetaId": "bridgeTxMetaId1",
  },
}
`;

exports[`BridgeStatusController startPollingForBridgeTxStatus emits bridgeTransactionFailed event when the status response is failed 1`] = `
Array [
  Array [
    "AccountsController:getSelectedMultichainAccount",
  ],
  Array [
    "AccountsController:getAccountByAddress",
    "0xaccount1",
  ],
  Array [
    "BridgeController:trackUnifiedSwapBridgeEvent",
    "Unified SwapBridge Failed",
    Object {
      "action_type": "crosschain-v1",
      "actual_time_minutes": 105213.34261666666,
      "allowance_reset_transaction": undefined,
      "approval_transaction": undefined,
      "chain_id_destination": "eip155:10",
      "chain_id_source": "eip155:42161",
      "custom_slippage": true,
      "destination_transaction": "FAILED",
      "error_message": "error_message",
      "gas_included": false,
      "is_hardware_wallet": false,
      "price_impact": 0,
      "provider": "lifi_across",
      "quote_vs_execution_ratio": 1,
      "quoted_time_minutes": 0.25,
      "quoted_vs_used_gas_ratio": 1,
      "security_warnings": Array [],
      "slippage_limit": 0,
      "source_transaction": "COMPLETE",
      "stx_enabled": false,
      "swap_type": "crosschain",
      "token_address_destination": "eip155:10/slip44:60",
      "token_address_source": "eip155:42161/slip44:60",
      "token_symbol_destination": "ETH",
      "token_symbol_source": "ETH",
      "usd_actual_gas": 0,
      "usd_actual_return": 0,
      "usd_amount_source": 0,
      "usd_quoted_gas": 0,
      "usd_quoted_return": 0,
    },
  ],
]
`;

exports[`BridgeStatusController startPollingForBridgeTxStatus sets the inital tx history state 1`] = `
Object {
  "bridgeTxMetaId1": Object {
    "account": "0xaccount1",
    "approvalTxId": undefined,
    "estimatedProcessingTimeInSeconds": 15,
    "hasApprovalTx": false,
    "initialDestAssetBalance": undefined,
    "isStxEnabled": false,
    "pricingData": Object {
      "amountSent": "1.234",
      "amountSentInUsd": undefined,
      "quotedGasInUsd": undefined,
      "quotedReturnInUsd": undefined,
    },
    "quote": Object {
      "bridgeId": "lifi",
      "bridges": Array [
        "across",
      ],
      "destAsset": Object {
        "address": "0x0000000000000000000000000000000000000000",
        "assetId": "eip155:10/slip44:60",
        "chainId": 10,
        "coinKey": "ETH",
        "decimals": 18,
        "icon": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
        "logoURI": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
        "name": "ETH",
        "priceUSD": "2478.63",
        "symbol": "ETH",
      },
      "destChainId": 10,
      "destTokenAmount": "990654755978612",
      "feeData": Object {
        "metabridge": Object {
          "amount": "8750000000000",
          "asset": Object {
            "address": "0x0000000000000000000000000000000000000000",
            "assetId": "eip155:42161/slip44:60",
            "chainId": 42161,
            "coinKey": "ETH",
            "decimals": 18,
            "icon": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
            "logoURI": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
            "name": "ETH",
            "priceUSD": "2478.7",
            "symbol": "ETH",
          },
        },
      },
      "requestId": "197c402f-cb96-4096-9f8c-54aed84ca776",
      "srcAsset": Object {
        "address": "0x0000000000000000000000000000000000000000",
        "assetId": "eip155:42161/slip44:60",
        "chainId": 42161,
        "coinKey": "ETH",
        "decimals": 18,
        "icon": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
        "logoURI": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
        "name": "ETH",
        "priceUSD": "2478.7",
        "symbol": "ETH",
      },
      "srcChainId": 42161,
      "srcTokenAmount": "991250000000000",
      "steps": Array [
        Object {
          "action": "bridge",
          "destAmount": "990654755978612",
          "destAsset": Object {
            "address": "0x0000000000000000000000000000000000000000",
            "assetId": "eip155:10/slip44:60",
            "chainId": 10,
            "coinKey": "ETH",
            "decimals": 18,
            "icon": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
            "logoURI": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
            "name": "ETH",
            "priceUSD": "2478.63",
            "symbol": "ETH",
          },
          "destChainId": 10,
          "protocol": Object {
            "displayName": "Across",
            "icon": "https://raw.githubusercontent.com/lifinance/types/main/src/assets/icons/bridges/acrossv2.png",
            "name": "across",
          },
          "srcAmount": "991250000000000",
          "srcAsset": Object {
            "address": "0x0000000000000000000000000000000000000000",
            "assetId": "eip155:42161/slip44:60",
            "chainId": 42161,
            "coinKey": "ETH",
            "decimals": 18,
            "icon": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
            "logoURI": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
            "name": "ETH",
            "priceUSD": "2478.7",
            "symbol": "ETH",
          },
          "srcChainId": 42161,
        },
      ],
    },
    "slippagePercentage": 0,
    "startTime": 1729964825189,
    "status": Object {
      "srcChain": Object {
        "chainId": 42161,
        "txHash": "0xsrcTxHash1",
      },
      "status": "PENDING",
    },
    "targetContractAddress": "0x23981fC34e69eeDFE2BD9a0a9fCb0719Fe09DbFC",
    "txMetaId": "bridgeTxMetaId1",
  },
}
`;

exports[`BridgeStatusController startPollingForBridgeTxStatus stops polling when the status response is complete 1`] = `
Array [
  Array [
    "AccountsController:getSelectedMultichainAccount",
  ],
  Array [
    "AccountsController:getAccountByAddress",
    "0xaccount1",
  ],
  Array [
    "BridgeController:trackUnifiedSwapBridgeEvent",
    "Unified SwapBridge Completed",
    Object {
      "action_type": "crosschain-v1",
      "actual_time_minutes": 105213.34261666666,
      "allowance_reset_transaction": undefined,
      "approval_transaction": undefined,
      "chain_id_destination": "eip155:10",
      "chain_id_source": "eip155:42161",
      "custom_slippage": true,
      "destination_transaction": "COMPLETE",
      "error_message": "error_message",
      "gas_included": false,
      "is_hardware_wallet": false,
      "price_impact": 0,
      "provider": "lifi_across",
      "quote_vs_execution_ratio": 1,
      "quoted_time_minutes": 0.25,
      "quoted_vs_used_gas_ratio": 1,
      "security_warnings": Array [],
      "slippage_limit": 0,
      "source_transaction": "COMPLETE",
      "stx_enabled": true,
      "swap_type": "crosschain",
      "token_address_destination": "eip155:10/slip44:60",
      "token_address_source": "eip155:42161/slip44:60",
      "token_symbol_destination": "ETH",
      "token_symbol_source": "ETH",
      "usd_actual_gas": 0,
      "usd_actual_return": 0,
      "usd_amount_source": 0,
      "usd_quoted_gas": 0,
      "usd_quoted_return": 0,
    },
  ],
]
`;

exports[`BridgeStatusController submitTx: EVM should delay after submitting linea approval 1`] = `
Object {
  "chainId": "0xa4b1",
  "hash": "0xevmTxHash",
  "id": "test-tx-id",
  "status": "unapproved",
  "time": 1234567890,
  "txParams": Object {
    "chainId": "0xa4b1",
    "data": "0xdata",
    "from": "0xaccount1",
    "gasLimit": "0x5208",
    "to": "0xbridgeContract",
    "value": "0x0",
  },
  "type": "bridge",
}
`;

exports[`BridgeStatusController submitTx: EVM should delay after submitting linea approval 2`] = `
Object {
  "bridge": "across",
  "bridgeId": "lifi",
  "destChainId": 10,
  "quote": Object {
    "bridgeId": "lifi",
    "bridges": Array [
      "across",
    ],
    "destAsset": Object {
      "address": "0x0000000000000000000000000000000000000000",
      "assetId": "eip155:10/slip44:60",
      "chainId": 10,
      "coinKey": "ETH",
      "decimals": 18,
      "icon": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
      "logoURI": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
      "name": "ETH",
      "priceUSD": "2478.63",
      "symbol": "ETH",
    },
    "destChainId": 10,
    "destTokenAmount": "990654755978612",
    "feeData": Object {
      "metabridge": Object {
        "amount": "8750000000000",
        "asset": Object {
          "address": "0x0000000000000000000000000000000000000000",
          "assetId": "eip155:42161/slip44:60",
          "chainId": 42161,
          "coinKey": "ETH",
          "decimals": 18,
          "icon": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
          "logoURI": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
          "name": "ETH",
          "priceUSD": "2478.7",
          "symbol": "ETH",
        },
      },
    },
    "requestId": "197c402f-cb96-4096-9f8c-54aed84ca776",
    "srcAsset": Object {
      "address": "0x0000000000000000000000000000000000000000",
      "assetId": "eip155:42161/slip44:60",
      "chainId": 42161,
      "coinKey": "ETH",
      "decimals": 18,
      "icon": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
      "logoURI": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
      "name": "ETH",
      "priceUSD": "2478.7",
      "symbol": "ETH",
    },
    "srcChainId": 59144,
    "srcTokenAmount": "991250000000000",
    "steps": Array [
      Object {
        "action": "bridge",
        "destAmount": "990654755978612",
        "destAsset": Object {
          "address": "0x0000000000000000000000000000000000000000",
          "assetId": "eip155:10/slip44:60",
          "chainId": 10,
          "coinKey": "ETH",
          "decimals": 18,
          "icon": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
          "logoURI": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
          "name": "ETH",
          "priceUSD": "2478.63",
          "symbol": "ETH",
        },
        "destChainId": 10,
        "protocol": Object {
          "displayName": "Across",
          "icon": "https://raw.githubusercontent.com/lifinance/types/main/src/assets/icons/bridges/acrossv2.png",
          "name": "across",
        },
        "srcAmount": "991250000000000",
        "srcAsset": Object {
          "address": "0x0000000000000000000000000000000000000000",
          "assetId": "eip155:42161/slip44:60",
          "chainId": 42161,
          "coinKey": "ETH",
          "decimals": 18,
          "icon": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
          "logoURI": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
          "name": "ETH",
          "priceUSD": "2478.7",
          "symbol": "ETH",
        },
        "srcChainId": 42161,
      },
    ],
  },
  "refuel": false,
  "srcChainId": 59144,
  "srcTxHash": "0xevmTxHash",
}
`;

exports[`BridgeStatusController submitTx: EVM should delay after submitting linea approval 3`] = `
Array [
  Array [
    "AccountsController:getAccountByAddress",
    "0xaccount1",
  ],
  Array [
    "NetworkController:findNetworkClientIdByChainId",
    "0xa4b1",
  ],
  Array [
    "GasFeeController:getState",
  ],
  Array [
    "TransactionController:getState",
  ],
  Array [
    "AccountsController:getAccountByAddress",
    "0xaccount1",
  ],
  Array [
    "NetworkController:findNetworkClientIdByChainId",
    "0xa4b1",
  ],
  Array [
    "GasFeeController:getState",
  ],
  Array [
    "TransactionController:getState",
  ],
  Array [
    "AccountsController:getSelectedMultichainAccount",
  ],
  Array [
    "AccountsController:getAccountByAddress",
    "0xaccount1",
  ],
  Array [
    "BridgeController:trackUnifiedSwapBridgeEvent",
    "Unified SwapBridge Submitted",
    Object {
      "action_type": "crosschain-v1",
      "actual_time_minutes": 0,
      "allowance_reset_transaction": undefined,
      "approval_transaction": "COMPLETE",
      "chain_id_destination": "eip155:10",
      "chain_id_source": "eip155:59144",
      "custom_slippage": true,
      "destination_transaction": "PENDING",
      "error_message": "error_message",
      "gas_included": false,
      "is_hardware_wallet": false,
      "price_impact": 0,
      "provider": "lifi_across",
      "quote_vs_execution_ratio": 1,
      "quoted_time_minutes": 0.25,
      "quoted_vs_used_gas_ratio": 1,
      "security_warnings": Array [],
      "slippage_limit": 0,
      "source_transaction": "COMPLETE",
      "stx_enabled": false,
      "swap_type": "crosschain",
      "token_address_destination": "eip155:10/slip44:60",
      "token_address_source": "eip155:42161/slip44:60",
      "token_symbol_destination": "ETH",
      "token_symbol_source": "ETH",
      "usd_actual_gas": 0,
      "usd_actual_return": 0,
      "usd_amount_source": 0,
      "usd_quoted_gas": 0,
      "usd_quoted_return": 0,
    },
  ],
]
`;

exports[`BridgeStatusController submitTx: EVM should handle smart accounts (4337) 1`] = `
Object {
  "chainId": "0xa4b1",
  "hash": "0xevmTxHash",
  "id": "test-tx-id",
  "status": "unapproved",
  "time": 1234567890,
  "txParams": Object {
    "chainId": "0xa4b1",
    "data": "0xdata",
    "from": "0xaccount1",
    "gasLimit": "0x5208",
    "to": "0xbridgeContract",
    "value": "0x0",
  },
  "type": "bridge",
}
`;

exports[`BridgeStatusController submitTx: EVM should handle smart accounts (4337) 2`] = `
Object {
  "bridge": "across",
  "bridgeId": "lifi",
  "destChainId": 10,
  "quote": Object {
    "bridgeId": "lifi",
    "bridges": Array [
      "across",
    ],
    "destAsset": Object {
      "address": "0x0000000000000000000000000000000000000000",
      "assetId": "eip155:10/slip44:60",
      "chainId": 10,
      "coinKey": "ETH",
      "decimals": 18,
      "icon": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
      "logoURI": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
      "name": "ETH",
      "priceUSD": "2478.63",
      "symbol": "ETH",
    },
    "destChainId": 10,
    "destTokenAmount": "990654755978612",
    "feeData": Object {
      "metabridge": Object {
        "amount": "8750000000000",
        "asset": Object {
          "address": "0x0000000000000000000000000000000000000000",
          "assetId": "eip155:42161/slip44:60",
          "chainId": 42161,
          "coinKey": "ETH",
          "decimals": 18,
          "icon": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
          "logoURI": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
          "name": "ETH",
          "priceUSD": "2478.7",
          "symbol": "ETH",
        },
      },
    },
    "requestId": "197c402f-cb96-4096-9f8c-54aed84ca776",
    "srcAsset": Object {
      "address": "0x0000000000000000000000000000000000000000",
      "assetId": "eip155:42161/slip44:60",
      "chainId": 42161,
      "coinKey": "ETH",
      "decimals": 18,
      "icon": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
      "logoURI": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
      "name": "ETH",
      "priceUSD": "2478.7",
      "symbol": "ETH",
    },
    "srcChainId": 42161,
    "srcTokenAmount": "991250000000000",
    "steps": Array [
      Object {
        "action": "bridge",
        "destAmount": "990654755978612",
        "destAsset": Object {
          "address": "0x0000000000000000000000000000000000000000",
          "assetId": "eip155:10/slip44:60",
          "chainId": 10,
          "coinKey": "ETH",
          "decimals": 18,
          "icon": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
          "logoURI": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
          "name": "ETH",
          "priceUSD": "2478.63",
          "symbol": "ETH",
        },
        "destChainId": 10,
        "protocol": Object {
          "displayName": "Across",
          "icon": "https://raw.githubusercontent.com/lifinance/types/main/src/assets/icons/bridges/acrossv2.png",
          "name": "across",
        },
        "srcAmount": "991250000000000",
        "srcAsset": Object {
          "address": "0x0000000000000000000000000000000000000000",
          "assetId": "eip155:42161/slip44:60",
          "chainId": 42161,
          "coinKey": "ETH",
          "decimals": 18,
          "icon": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
          "logoURI": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
          "name": "ETH",
          "priceUSD": "2478.7",
          "symbol": "ETH",
        },
        "srcChainId": 42161,
      },
    ],
  },
  "refuel": false,
  "srcChainId": 42161,
  "srcTxHash": "0xevmTxHash",
}
`;

exports[`BridgeStatusController submitTx: EVM should handle smart accounts (4337) 3`] = `
Array [
  Array [
    Object {
      "chainId": "0xa4b1",
      "networkClientId": "arbitrum",
      "transactionParams": Object {
        "chainId": "0xa4b1",
        "data": "0xdata",
        "from": "0xaccount1",
        "gas": "21000",
        "gasLimit": "21000",
        "to": "0xbridgeContract",
        "value": "0x0",
      },
    },
  ],
]
`;

exports[`BridgeStatusController submitTx: EVM should handle smart accounts (4337) 4`] = `
Array [
  Array [
    "AccountsController:getAccountByAddress",
    "0xaccount1",
  ],
  Array [
    "NetworkController:findNetworkClientIdByChainId",
    "0xa4b1",
  ],
  Array [
    "GasFeeController:getState",
  ],
  Array [
    "TransactionController:getState",
  ],
  Array [
    "AccountsController:getSelectedMultichainAccount",
  ],
  Array [
    "AccountsController:getAccountByAddress",
    "",
  ],
  Array [
    "BridgeController:trackUnifiedSwapBridgeEvent",
    "Unified SwapBridge Submitted",
    Object {
      "action_type": "crosschain-v1",
      "actual_time_minutes": 0,
      "allowance_reset_transaction": undefined,
      "approval_transaction": undefined,
      "chain_id_destination": "eip155:10",
      "chain_id_source": "eip155:42161",
      "custom_slippage": true,
      "destination_transaction": "PENDING",
      "error_message": "error_message",
      "gas_included": false,
      "is_hardware_wallet": false,
      "price_impact": 0,
      "provider": "lifi_across",
      "quote_vs_execution_ratio": 1,
      "quoted_time_minutes": 0.25,
      "quoted_vs_used_gas_ratio": 1,
      "security_warnings": Array [],
      "slippage_limit": 0,
      "source_transaction": "COMPLETE",
      "stx_enabled": false,
      "swap_type": "crosschain",
      "token_address_destination": "eip155:10/slip44:60",
      "token_address_source": "eip155:42161/slip44:60",
      "token_symbol_destination": "ETH",
      "token_symbol_source": "ETH",
      "usd_actual_gas": 0,
      "usd_actual_return": 0,
      "usd_amount_source": 0,
      "usd_quoted_gas": 0,
      "usd_quoted_return": 0,
    },
  ],
]
`;

exports[`BridgeStatusController submitTx: EVM should handle smart accounts (4337) 5`] = `
Array [
  Array [
    Object {
      "chainId": "0xa4b1",
      "data": "0xdata",
      "from": "0xaccount1",
      "gas": "0x5208",
      "gasLimit": "21000",
      "maxFeePerGas": undefined,
      "maxPriorityFeePerGas": undefined,
      "to": "0xbridgeContract",
      "value": "0x0",
    },
    Object {
      "actionId": "1234567890.456",
      "networkClientId": "arbitrum",
      "origin": "metamask",
      "requireApproval": false,
      "type": "bridge",
    },
  ],
]
`;

exports[`BridgeStatusController submitTx: EVM should handle smart transactions 1`] = `
Object {
  "approvalTxId": undefined,
  "chainId": "0xa4b1",
  "destinationChainId": "0xa",
  "destinationTokenAddress": "0x0000000000000000000000000000000000000000",
  "destinationTokenAmount": "990654755978612",
  "destinationTokenDecimals": 18,
  "destinationTokenSymbol": "ETH",
  "hash": "0xevmTxHash",
  "id": "test-tx-id",
  "sourceTokenAddress": "0x0000000000000000000000000000000000000000",
  "sourceTokenAmount": "991250000000000",
  "sourceTokenDecimals": 18,
  "sourceTokenSymbol": "ETH",
  "status": "unapproved",
  "swapTokenValue": "1.234",
  "time": 1234567890,
  "txParams": Object {
    "chainId": "0xa4b1",
    "data": "0xdata",
    "from": "0xaccount1",
    "gasLimit": "0x5208",
    "to": "0xbridgeContract",
    "value": "0x0",
  },
  "type": "bridge",
}
`;

exports[`BridgeStatusController submitTx: EVM should handle smart transactions 2`] = `
Object {
  "bridge": "across",
  "bridgeId": "lifi",
  "destChainId": 10,
  "quote": Object {
    "bridgeId": "lifi",
    "bridges": Array [
      "across",
    ],
    "destAsset": Object {
      "address": "0x0000000000000000000000000000000000000000",
      "assetId": "eip155:10/slip44:60",
      "chainId": 10,
      "coinKey": "ETH",
      "decimals": 18,
      "icon": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
      "logoURI": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
      "name": "ETH",
      "priceUSD": "2478.63",
      "symbol": "ETH",
    },
    "destChainId": 10,
    "destTokenAmount": "990654755978612",
    "feeData": Object {
      "metabridge": Object {
        "amount": "8750000000000",
        "asset": Object {
          "address": "0x0000000000000000000000000000000000000000",
          "assetId": "eip155:42161/slip44:60",
          "chainId": 42161,
          "coinKey": "ETH",
          "decimals": 18,
          "icon": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
          "logoURI": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
          "name": "ETH",
          "priceUSD": "2478.7",
          "symbol": "ETH",
        },
      },
    },
    "requestId": "197c402f-cb96-4096-9f8c-54aed84ca776",
    "srcAsset": Object {
      "address": "0x0000000000000000000000000000000000000000",
      "assetId": "eip155:42161/slip44:60",
      "chainId": 42161,
      "coinKey": "ETH",
      "decimals": 18,
      "icon": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
      "logoURI": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
      "name": "ETH",
      "priceUSD": "2478.7",
      "symbol": "ETH",
    },
    "srcChainId": 42161,
    "srcTokenAmount": "991250000000000",
    "steps": Array [
      Object {
        "action": "bridge",
        "destAmount": "990654755978612",
        "destAsset": Object {
          "address": "0x0000000000000000000000000000000000000000",
          "assetId": "eip155:10/slip44:60",
          "chainId": 10,
          "coinKey": "ETH",
          "decimals": 18,
          "icon": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
          "logoURI": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
          "name": "ETH",
          "priceUSD": "2478.63",
          "symbol": "ETH",
        },
        "destChainId": 10,
        "protocol": Object {
          "displayName": "Across",
          "icon": "https://raw.githubusercontent.com/lifinance/types/main/src/assets/icons/bridges/acrossv2.png",
          "name": "across",
        },
        "srcAmount": "991250000000000",
        "srcAsset": Object {
          "address": "0x0000000000000000000000000000000000000000",
          "assetId": "eip155:42161/slip44:60",
          "chainId": 42161,
          "coinKey": "ETH",
          "decimals": 18,
          "icon": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
          "logoURI": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
          "name": "ETH",
          "priceUSD": "2478.7",
          "symbol": "ETH",
        },
        "srcChainId": 42161,
      },
    ],
  },
  "refuel": false,
  "srcChainId": 42161,
  "srcTxHash": "0xevmTxHash",
}
`;

exports[`BridgeStatusController submitTx: EVM should handle smart transactions 3`] = `
Array [
  Array [
    Object {
      "chainId": "0xa4b1",
      "networkClientId": "arbitrum",
      "transactionParams": Object {
        "chainId": "0xa4b1",
        "data": "0xdata",
        "from": "0xaccount1",
        "gas": "21000",
        "gasLimit": "21000",
        "to": "0xbridgeContract",
        "value": "0x0",
      },
    },
  ],
]
`;

exports[`BridgeStatusController submitTx: EVM should handle smart transactions 4`] = `
Array [
  Array [
    Object {
      "chainId": "0xa4b1",
      "data": "0xdata",
      "from": "0xaccount1",
      "gas": "0x5208",
      "gasLimit": "21000",
      "maxFeePerGas": undefined,
      "maxPriorityFeePerGas": undefined,
      "to": "0xbridgeContract",
      "value": "0x0",
    },
    Object {
      "actionId": "1234567890.456",
      "networkClientId": "arbitrum",
      "origin": "metamask",
      "requireApproval": false,
      "type": "bridge",
    },
  ],
]
`;

exports[`BridgeStatusController submitTx: EVM should handle smart transactions 5`] = `
Array [
  Array [
    "AccountsController:getAccountByAddress",
    "0xaccount1",
  ],
  Array [
    "NetworkController:findNetworkClientIdByChainId",
    "0xa4b1",
  ],
  Array [
    "GasFeeController:getState",
  ],
  Array [
    "AccountsController:getSelectedMultichainAccount",
  ],
  Array [
    "AccountsController:getAccountByAddress",
    "",
  ],
  Array [
    "BridgeController:trackUnifiedSwapBridgeEvent",
    "Unified SwapBridge Submitted",
    Object {
      "action_type": "crosschain-v1",
      "actual_time_minutes": 0,
      "allowance_reset_transaction": undefined,
      "approval_transaction": undefined,
      "chain_id_destination": "eip155:10",
      "chain_id_source": "eip155:42161",
      "custom_slippage": true,
      "destination_transaction": "PENDING",
      "error_message": "error_message",
      "gas_included": false,
      "is_hardware_wallet": false,
      "price_impact": 0,
      "provider": "lifi_across",
      "quote_vs_execution_ratio": 1,
      "quoted_time_minutes": 0.25,
      "quoted_vs_used_gas_ratio": 1,
      "security_warnings": Array [],
      "slippage_limit": 0,
      "source_transaction": "COMPLETE",
      "stx_enabled": true,
      "swap_type": "crosschain",
      "token_address_destination": "eip155:10/slip44:60",
      "token_address_source": "eip155:42161/slip44:60",
      "token_symbol_destination": "ETH",
      "token_symbol_source": "ETH",
      "usd_actual_gas": 0,
      "usd_actual_return": 0,
      "usd_amount_source": 0,
      "usd_quoted_gas": 0,
      "usd_quoted_return": 0,
    },
  ],
]
`;

exports[`BridgeStatusController submitTx: EVM should reset USDT allowance 1`] = `
Object {
  "chainId": "0xa4b1",
  "hash": "0xevmTxHash",
  "id": "test-tx-id",
  "status": "unapproved",
  "time": 1234567890,
  "txParams": Object {
    "chainId": "0xa4b1",
    "data": "0xdata",
    "from": "0xaccount1",
    "gasLimit": "0x5208",
    "to": "0xbridgeContract",
    "value": "0x0",
  },
  "type": "bridge",
}
`;

exports[`BridgeStatusController submitTx: EVM should reset USDT allowance 2`] = `
Object {
  "bridge": "across",
  "bridgeId": "lifi",
  "destChainId": 10,
  "quote": Object {
    "bridgeId": "lifi",
    "bridges": Array [
      "across",
    ],
    "destAsset": Object {
      "address": "0x0000000000000000000000000000000000000000",
      "assetId": "eip155:10/slip44:60",
      "chainId": 10,
      "coinKey": "ETH",
      "decimals": 18,
      "icon": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
      "logoURI": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
      "name": "ETH",
      "priceUSD": "2478.63",
      "symbol": "ETH",
    },
    "destChainId": 10,
    "destTokenAmount": "990654755978612",
    "feeData": Object {
      "metabridge": Object {
        "amount": "8750000000000",
        "asset": Object {
          "address": "0x0000000000000000000000000000000000000000",
          "assetId": "eip155:42161/slip44:60",
          "chainId": 42161,
          "coinKey": "ETH",
          "decimals": 18,
          "icon": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
          "logoURI": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
          "name": "ETH",
          "priceUSD": "2478.7",
          "symbol": "ETH",
        },
      },
    },
    "requestId": "197c402f-cb96-4096-9f8c-54aed84ca776",
    "srcAsset": Object {
      "address": "0x0000000000000000000000000000000000000000",
      "assetId": "eip155:42161/slip44:60",
      "chainId": 42161,
      "coinKey": "ETH",
      "decimals": 18,
      "icon": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
      "logoURI": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
      "name": "ETH",
      "priceUSD": "2478.7",
      "symbol": "ETH",
    },
    "srcChainId": 42161,
    "srcTokenAmount": "991250000000000",
    "steps": Array [
      Object {
        "action": "bridge",
        "destAmount": "990654755978612",
        "destAsset": Object {
          "address": "0x0000000000000000000000000000000000000000",
          "assetId": "eip155:10/slip44:60",
          "chainId": 10,
          "coinKey": "ETH",
          "decimals": 18,
          "icon": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
          "logoURI": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
          "name": "ETH",
          "priceUSD": "2478.63",
          "symbol": "ETH",
        },
        "destChainId": 10,
        "protocol": Object {
          "displayName": "Across",
          "icon": "https://raw.githubusercontent.com/lifinance/types/main/src/assets/icons/bridges/acrossv2.png",
          "name": "across",
        },
        "srcAmount": "991250000000000",
        "srcAsset": Object {
          "address": "0x0000000000000000000000000000000000000000",
          "assetId": "eip155:42161/slip44:60",
          "chainId": 42161,
          "coinKey": "ETH",
          "decimals": 18,
          "icon": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
          "logoURI": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
          "name": "ETH",
          "priceUSD": "2478.7",
          "symbol": "ETH",
        },
        "srcChainId": 42161,
      },
    ],
  },
  "refuel": false,
  "srcChainId": 42161,
  "srcTxHash": "0xevmTxHash",
}
`;

exports[`BridgeStatusController submitTx: EVM should reset USDT allowance 3`] = `
Array [
  Array [
    Object {
      "chainId": "0xa4b1",
      "networkClientId": "arbitrum-client-id",
      "transactionParams": Object {
        "chainId": "0xa4b1",
        "data": "0x095ea7b30000000000000000000000000439e60f02a8900a951603950d8d4527f400c3f10000000000000000000000000000000000000000000000000000000000000000",
        "from": "0xaccount1",
        "gas": "21000",
        "gasLimit": "21000",
        "to": "0xtokenContract",
        "value": "0x0",
      },
    },
  ],
  Array [
    Object {
      "chainId": "0xa4b1",
      "networkClientId": "arbitrum-client-id",
      "transactionParams": Object {
        "chainId": "0xa4b1",
        "data": "0xapprovalData",
        "from": "0xaccount1",
        "gas": "21000",
        "gasLimit": "21000",
        "to": "0xtokenContract",
        "value": "0x0",
      },
    },
  ],
  Array [
    Object {
      "chainId": "0xa4b1",
      "networkClientId": "arbitrum",
      "transactionParams": Object {
        "chainId": "0xa4b1",
        "data": "0xdata",
        "from": "0xaccount1",
        "gas": "21000",
        "gasLimit": "21000",
        "to": "0xbridgeContract",
        "value": "0x0",
      },
    },
  ],
]
`;

exports[`BridgeStatusController submitTx: EVM should reset USDT allowance 4`] = `
Array [
  Array [
    Object {
      "chainId": "0xa4b1",
      "data": "0x095ea7b30000000000000000000000000439e60f02a8900a951603950d8d4527f400c3f10000000000000000000000000000000000000000000000000000000000000000",
      "from": "0xaccount1",
      "gas": "0x5208",
      "gasLimit": "21000",
      "maxFeePerGas": undefined,
      "maxPriorityFeePerGas": undefined,
      "to": "0xtokenContract",
      "value": "0x0",
    },
    Object {
      "actionId": "1234567890.456",
      "networkClientId": "arbitrum-client-id",
      "origin": "metamask",
      "requireApproval": false,
      "type": "bridgeApproval",
    },
  ],
  Array [
    Object {
      "chainId": "0xa4b1",
      "data": "0xapprovalData",
      "from": "0xaccount1",
      "gas": "0x5208",
      "gasLimit": "21000",
      "maxFeePerGas": undefined,
      "maxPriorityFeePerGas": undefined,
      "to": "0xtokenContract",
      "value": "0x0",
    },
    Object {
      "actionId": "1234567890.456",
      "networkClientId": "arbitrum-client-id",
      "origin": "metamask",
      "requireApproval": false,
      "type": "bridgeApproval",
    },
  ],
  Array [
    Object {
      "chainId": "0xa4b1",
      "data": "0xdata",
      "from": "0xaccount1",
      "gas": "0x5208",
      "gasLimit": "21000",
      "maxFeePerGas": undefined,
      "maxPriorityFeePerGas": undefined,
      "to": "0xbridgeContract",
      "value": "0x0",
    },
    Object {
      "actionId": "1234567890.456",
      "networkClientId": "arbitrum",
      "origin": "metamask",
      "requireApproval": false,
      "type": "bridge",
    },
  ],
]
`;

exports[`BridgeStatusController submitTx: EVM should reset USDT allowance 5`] = `
Array [
  Array [
    "BridgeController:getBridgeERC20Allowance",
    "0x0000000000000000000000000000000000000000",
    "0xa4b1",
  ],
  Array [
    "AccountsController:getAccountByAddress",
    "0xaccount1",
  ],
  Array [
    "NetworkController:findNetworkClientIdByChainId",
    "0xa4b1",
  ],
  Array [
    "GasFeeController:getState",
  ],
  Array [
    "TransactionController:getState",
  ],
  Array [
    "AccountsController:getAccountByAddress",
    "0xaccount1",
  ],
  Array [
    "NetworkController:findNetworkClientIdByChainId",
    "0xa4b1",
  ],
  Array [
    "GasFeeController:getState",
  ],
  Array [
    "TransactionController:getState",
  ],
  Array [
    "AccountsController:getAccountByAddress",
    "0xaccount1",
  ],
  Array [
    "NetworkController:findNetworkClientIdByChainId",
    "0xa4b1",
  ],
  Array [
    "GasFeeController:getState",
  ],
  Array [
    "TransactionController:getState",
  ],
  Array [
    "AccountsController:getSelectedMultichainAccount",
  ],
  Array [
    "AccountsController:getAccountByAddress",
    "0xaccount1",
  ],
  Array [
    "BridgeController:trackUnifiedSwapBridgeEvent",
    "Unified SwapBridge Submitted",
    Object {
      "action_type": "crosschain-v1",
      "actual_time_minutes": 0,
      "allowance_reset_transaction": undefined,
      "approval_transaction": "COMPLETE",
      "chain_id_destination": "eip155:10",
      "chain_id_source": "eip155:42161",
      "custom_slippage": true,
      "destination_transaction": "PENDING",
      "error_message": "error_message",
      "gas_included": false,
      "is_hardware_wallet": false,
      "price_impact": 0,
      "provider": "lifi_across",
      "quote_vs_execution_ratio": 1,
      "quoted_time_minutes": 0.25,
      "quoted_vs_used_gas_ratio": 1,
      "security_warnings": Array [],
      "slippage_limit": 0,
      "source_transaction": "COMPLETE",
      "stx_enabled": false,
      "swap_type": "crosschain",
      "token_address_destination": "eip155:10/slip44:60",
      "token_address_source": "eip155:42161/slip44:60",
      "token_symbol_destination": "ETH",
      "token_symbol_source": "ETH",
      "usd_actual_gas": 0,
      "usd_actual_return": 0,
      "usd_amount_source": 0,
      "usd_quoted_gas": 0,
      "usd_quoted_return": 0,
    },
  ],
]
`;

exports[`BridgeStatusController submitTx: EVM should successfully submit an EVM bridge transaction with approval 1`] = `
Object {
  "chainId": "0xa4b1",
  "hash": "0xevmTxHash",
  "id": "test-tx-id",
  "status": "unapproved",
  "time": 1234567890,
  "txParams": Object {
    "chainId": "0xa4b1",
    "data": "0xdata",
    "from": "0xaccount1",
    "gasLimit": "0x5208",
    "to": "0xbridgeContract",
    "value": "0x0",
  },
  "type": "bridge",
}
`;

exports[`BridgeStatusController submitTx: EVM should successfully submit an EVM bridge transaction with approval 2`] = `
Object {
  "bridge": "across",
  "bridgeId": "lifi",
  "destChainId": 10,
  "quote": Object {
    "bridgeId": "lifi",
    "bridges": Array [
      "across",
    ],
    "destAsset": Object {
      "address": "0x0000000000000000000000000000000000000000",
      "assetId": "eip155:10/slip44:60",
      "chainId": 10,
      "coinKey": "ETH",
      "decimals": 18,
      "icon": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
      "logoURI": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
      "name": "ETH",
      "priceUSD": "2478.63",
      "symbol": "ETH",
    },
    "destChainId": 10,
    "destTokenAmount": "990654755978612",
    "feeData": Object {
      "metabridge": Object {
        "amount": "8750000000000",
        "asset": Object {
          "address": "0x0000000000000000000000000000000000000000",
          "assetId": "eip155:42161/slip44:60",
          "chainId": 42161,
          "coinKey": "ETH",
          "decimals": 18,
          "icon": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
          "logoURI": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
          "name": "ETH",
          "priceUSD": "2478.7",
          "symbol": "ETH",
        },
      },
    },
    "requestId": "197c402f-cb96-4096-9f8c-54aed84ca776",
    "srcAsset": Object {
      "address": "0x0000000000000000000000000000000000000000",
      "assetId": "eip155:42161/slip44:60",
      "chainId": 42161,
      "coinKey": "ETH",
      "decimals": 18,
      "icon": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
      "logoURI": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
      "name": "ETH",
      "priceUSD": "2478.7",
      "symbol": "ETH",
    },
    "srcChainId": 42161,
    "srcTokenAmount": "991250000000000",
    "steps": Array [
      Object {
        "action": "bridge",
        "destAmount": "990654755978612",
        "destAsset": Object {
          "address": "0x0000000000000000000000000000000000000000",
          "assetId": "eip155:10/slip44:60",
          "chainId": 10,
          "coinKey": "ETH",
          "decimals": 18,
          "icon": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
          "logoURI": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
          "name": "ETH",
          "priceUSD": "2478.63",
          "symbol": "ETH",
        },
        "destChainId": 10,
        "protocol": Object {
          "displayName": "Across",
          "icon": "https://raw.githubusercontent.com/lifinance/types/main/src/assets/icons/bridges/acrossv2.png",
          "name": "across",
        },
        "srcAmount": "991250000000000",
        "srcAsset": Object {
          "address": "0x0000000000000000000000000000000000000000",
          "assetId": "eip155:42161/slip44:60",
          "chainId": 42161,
          "coinKey": "ETH",
          "decimals": 18,
          "icon": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
          "logoURI": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
          "name": "ETH",
          "priceUSD": "2478.7",
          "symbol": "ETH",
        },
        "srcChainId": 42161,
      },
    ],
  },
  "refuel": false,
  "srcChainId": 42161,
  "srcTxHash": "0xevmTxHash",
}
`;

exports[`BridgeStatusController submitTx: EVM should successfully submit an EVM bridge transaction with approval 3`] = `
Array [
  Array [
    Object {
      "chainId": "0xa4b1",
      "data": "0xapprovalData",
      "from": "0xaccount1",
      "gas": "0x5208",
      "gasLimit": "21000",
      "maxFeePerGas": undefined,
      "maxPriorityFeePerGas": undefined,
      "to": "0xtokenContract",
      "value": "0x0",
    },
    Object {
      "actionId": "1234567890.456",
      "networkClientId": "arbitrum-client-id",
      "origin": "metamask",
      "requireApproval": false,
      "type": "bridgeApproval",
    },
  ],
  Array [
    Object {
      "chainId": "0xa4b1",
      "data": "0xdata",
      "from": "0xaccount1",
      "gas": "0x5208",
      "gasLimit": "21000",
      "maxFeePerGas": undefined,
      "maxPriorityFeePerGas": undefined,
      "to": "0xbridgeContract",
      "value": "0x0",
    },
    Object {
      "actionId": "1234567890.456",
      "networkClientId": "arbitrum",
      "origin": "metamask",
      "requireApproval": false,
      "type": "bridge",
    },
  ],
]
`;

exports[`BridgeStatusController submitTx: EVM should successfully submit an EVM bridge transaction with approval 4`] = `
Array [
  Array [
    "AccountsController:getAccountByAddress",
    "0xaccount1",
  ],
  Array [
    "NetworkController:findNetworkClientIdByChainId",
    "0xa4b1",
  ],
  Array [
    "GasFeeController:getState",
  ],
  Array [
    "TransactionController:getState",
  ],
  Array [
    "AccountsController:getAccountByAddress",
    "0xaccount1",
  ],
  Array [
    "NetworkController:findNetworkClientIdByChainId",
    "0xa4b1",
  ],
  Array [
    "GasFeeController:getState",
  ],
  Array [
    "TransactionController:getState",
  ],
  Array [
    "AccountsController:getSelectedMultichainAccount",
  ],
  Array [
    "AccountsController:getAccountByAddress",
    "0xaccount1",
  ],
  Array [
    "BridgeController:trackUnifiedSwapBridgeEvent",
    "Unified SwapBridge Submitted",
    Object {
      "action_type": "crosschain-v1",
      "actual_time_minutes": 0,
      "allowance_reset_transaction": undefined,
      "approval_transaction": "COMPLETE",
      "chain_id_destination": "eip155:10",
      "chain_id_source": "eip155:42161",
      "custom_slippage": true,
      "destination_transaction": "PENDING",
      "error_message": "error_message",
      "gas_included": false,
      "is_hardware_wallet": false,
      "price_impact": 0,
      "provider": "lifi_across",
      "quote_vs_execution_ratio": 1,
      "quoted_time_minutes": 0.25,
      "quoted_vs_used_gas_ratio": 1,
      "security_warnings": Array [],
      "slippage_limit": 0,
      "source_transaction": "COMPLETE",
      "stx_enabled": false,
      "swap_type": "crosschain",
      "token_address_destination": "eip155:10/slip44:60",
      "token_address_source": "eip155:42161/slip44:60",
      "token_symbol_destination": "ETH",
      "token_symbol_source": "ETH",
      "usd_actual_gas": 0,
      "usd_actual_return": 0,
      "usd_amount_source": 0,
      "usd_quoted_gas": 0,
      "usd_quoted_return": 0,
    },
  ],
]
`;

exports[`BridgeStatusController submitTx: EVM should successfully submit an EVM bridge transaction with no approval 1`] = `
Object {
  "chainId": "0xa4b1",
  "hash": "0xevmTxHash",
  "id": "test-tx-id",
  "status": "unapproved",
  "time": 1234567890,
  "txParams": Object {
    "chainId": "0xa4b1",
    "data": "0xdata",
    "from": "0xaccount1",
    "gasLimit": "0x5208",
    "to": "0xbridgeContract",
    "value": "0x0",
  },
  "type": "bridge",
}
`;

exports[`BridgeStatusController submitTx: EVM should successfully submit an EVM bridge transaction with no approval 2`] = `
Object {
  "bridge": "across",
  "bridgeId": "lifi",
  "destChainId": 10,
  "quote": Object {
    "bridgeId": "lifi",
    "bridges": Array [
      "across",
    ],
    "destAsset": Object {
      "address": "0x0000000000000000000000000000000000000032",
      "assetId": "eip155:10/slip44:60",
      "chainId": 10,
      "coinKey": "WETH",
      "decimals": 18,
      "icon": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
      "logoURI": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
      "name": "WETH",
      "priceUSD": "2478.63",
      "symbol": "WETH",
    },
    "destChainId": 10,
    "destTokenAmount": "990654755978612",
    "feeData": Object {
      "metabridge": Object {
        "amount": "8750000000000",
        "asset": Object {
          "address": "0x0000000000000000000000000000000000000000",
          "assetId": "eip155:42161/slip44:60",
          "chainId": 42161,
          "coinKey": "ETH",
          "decimals": 18,
          "icon": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
          "logoURI": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
          "name": "ETH",
          "priceUSD": "2478.7",
          "symbol": "ETH",
        },
      },
    },
    "requestId": "197c402f-cb96-4096-9f8c-54aed84ca776",
    "srcAsset": Object {
      "address": "0x0000000000000000000000000000000000000000",
      "assetId": "eip155:42161/slip44:60",
      "chainId": 42161,
      "coinKey": "ETH",
      "decimals": 18,
      "icon": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
      "logoURI": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
      "name": "ETH",
      "priceUSD": "2478.7",
      "symbol": "ETH",
    },
    "srcChainId": 42161,
    "srcTokenAmount": "991250000000000",
    "steps": Array [
      Object {
        "action": "bridge",
        "destAmount": "990654755978612",
        "destAsset": Object {
          "address": "0x0000000000000000000000000000000000000000",
          "assetId": "eip155:10/slip44:60",
          "chainId": 10,
          "coinKey": "ETH",
          "decimals": 18,
          "icon": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
          "logoURI": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
          "name": "ETH",
          "priceUSD": "2478.63",
          "symbol": "ETH",
        },
        "destChainId": 10,
        "protocol": Object {
          "displayName": "Across",
          "icon": "https://raw.githubusercontent.com/lifinance/types/main/src/assets/icons/bridges/acrossv2.png",
          "name": "across",
        },
        "srcAmount": "991250000000000",
        "srcAsset": Object {
          "address": "0x0000000000000000000000000000000000000000",
          "assetId": "eip155:42161/slip44:60",
          "chainId": 42161,
          "coinKey": "ETH",
          "decimals": 18,
          "icon": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
          "logoURI": "https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
          "name": "ETH",
          "priceUSD": "2478.7",
          "symbol": "ETH",
        },
        "srcChainId": 42161,
      },
    ],
  },
  "refuel": false,
  "srcChainId": 42161,
  "srcTxHash": "0xevmTxHash",
}
`;

exports[`BridgeStatusController submitTx: EVM should successfully submit an EVM bridge transaction with no approval 3`] = `
Array [
  Array [
    Object {
      "chainId": "0xa4b1",
      "networkClientId": "arbitrum",
      "transactionParams": Object {
        "chainId": "0xa4b1",
        "data": "0xdata",
        "from": "0xaccount1",
        "gas": "21000",
        "gasLimit": "21000",
        "to": "0xbridgeContract",
        "value": "0x0",
      },
    },
  ],
]
`;

exports[`BridgeStatusController submitTx: EVM should successfully submit an EVM bridge transaction with no approval 4`] = `
Array [
  Array [
    Object {
      "chainId": "0xa4b1",
      "data": "0xdata",
      "from": "0xaccount1",
      "gas": "0x5208",
      "gasLimit": "21000",
      "maxFeePerGas": undefined,
      "maxPriorityFeePerGas": undefined,
      "to": "0xbridgeContract",
      "value": "0x0",
    },
    Object {
      "actionId": "1234567890.456",
      "networkClientId": "arbitrum",
      "origin": "metamask",
      "requireApproval": false,
      "type": "bridge",
    },
  ],
]
`;

exports[`BridgeStatusController submitTx: EVM should successfully submit an EVM bridge transaction with no approval 5`] = `
Array [
  Array [
    "AccountsController:getAccountByAddress",
    "0xaccount1",
  ],
  Array [
    "NetworkController:findNetworkClientIdByChainId",
    "0xa4b1",
  ],
  Array [
    "GasFeeController:getState",
  ],
  Array [
    "TransactionController:getState",
  ],
  Array [
    "AccountsController:getSelectedMultichainAccount",
  ],
  Array [
    "AccountsController:getAccountByAddress",
    "0xaccount1",
  ],
  Array [
    "BridgeController:trackUnifiedSwapBridgeEvent",
    "Unified SwapBridge Submitted",
    Object {
      "action_type": "crosschain-v1",
      "actual_time_minutes": 0,
      "allowance_reset_transaction": undefined,
      "approval_transaction": undefined,
      "chain_id_destination": "eip155:10",
      "chain_id_source": "eip155:42161",
      "custom_slippage": true,
      "destination_transaction": "PENDING",
      "error_message": "error_message",
      "gas_included": false,
      "is_hardware_wallet": false,
      "price_impact": 0,
      "provider": "lifi_across",
      "quote_vs_execution_ratio": 1,
      "quoted_time_minutes": 0.25,
      "quoted_vs_used_gas_ratio": 1,
      "security_warnings": Array [],
      "slippage_limit": 0,
      "source_transaction": "COMPLETE",
      "stx_enabled": false,
      "swap_type": "crosschain",
      "token_address_destination": "eip155:10/slip44:60",
      "token_address_source": "eip155:42161/slip44:60",
      "token_symbol_destination": "WETH",
      "token_symbol_source": "ETH",
      "usd_actual_gas": 0,
      "usd_actual_return": 0,
      "usd_amount_source": 0,
      "usd_quoted_gas": 0,
      "usd_quoted_return": 0,
    },
  ],
]
`;

exports[`BridgeStatusController submitTx: EVM should throw an error if approval tx fails 1`] = `
Array [
  Array [
    Object {
      "chainId": "0xa4b1",
      "data": "0xapprovalData",
      "from": "0xaccount1",
      "gas": "0x5208",
      "gasLimit": "21000",
      "maxFeePerGas": undefined,
      "maxPriorityFeePerGas": undefined,
      "to": "0xtokenContract",
      "value": "0x0",
    },
    Object {
      "actionId": "1234567890.456",
      "networkClientId": "arbitrum-client-id",
      "origin": "metamask",
      "requireApproval": false,
      "type": "bridgeApproval",
    },
  ],
]
`;

exports[`BridgeStatusController submitTx: EVM should throw an error if approval tx fails 2`] = `
Array [
  Array [
    "AccountsController:getAccountByAddress",
    "0xaccount1",
  ],
  Array [
    "NetworkController:findNetworkClientIdByChainId",
    "0xa4b1",
  ],
  Array [
    "GasFeeController:getState",
  ],
]
`;

exports[`BridgeStatusController submitTx: EVM should throw an error if approval tx meta is undefined 1`] = `
Array [
  Array [
    Object {
      "chainId": "0xa4b1",
      "data": "0xapprovalData",
      "from": "0xaccount1",
      "gas": "0x5208",
      "gasLimit": "21000",
      "maxFeePerGas": undefined,
      "maxPriorityFeePerGas": undefined,
      "to": "0xtokenContract",
      "value": "0x0",
    },
    Object {
      "actionId": "1234567890.456",
      "networkClientId": "arbitrum-client-id",
      "origin": "metamask",
      "requireApproval": false,
      "type": "bridgeApproval",
    },
  ],
]
`;

exports[`BridgeStatusController submitTx: EVM should throw an error if approval tx meta is undefined 2`] = `
Array [
  Array [
    "AccountsController:getAccountByAddress",
    "0xaccount1",
  ],
  Array [
    "NetworkController:findNetworkClientIdByChainId",
    "0xa4b1",
  ],
  Array [
    "GasFeeController:getState",
  ],
  Array [
    "TransactionController:getState",
  ],
]
`;

exports[`BridgeStatusController submitTx: Solana should successfully submit a Solana transaction 1`] = `
Array [
  Array [
    "AccountsController:getSelectedMultichainAccount",
  ],
  Array [
    "SnapController:handleRequest",
    Object {
      "handler": "onKeyringRequest",
      "origin": "metamask",
      "request": Object {
        "id": "test-uuid-1234",
        "jsonrpc": "2.0",
        "method": "keyring_submitRequest",
        "params": Object {
          "account": undefined,
          "id": "test-uuid-1234",
          "request": Object {
            "method": "signAndSendTransaction",
            "params": Object {
              "account": Object {
                "address": "0x123...",
              },
              "scope": "solana-chain-id",
              "transaction": "AQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAAQAHDXLY8oVRIwA8ZdRSGjM5RIZJW8Wv+Twyw3NqU4Hov+OHoHp/dmeDvstKbICW3ezeGR69t3/PTAvdXgZVdJFJXaxkoKXUTWfEAyQyCCG9nwVoDsd10OFdnM9ldSi+9SLqHpqWVDV+zzkmftkF//DpbXxqeH8obNXHFR7pUlxG9uNVOn64oNsFdeUvD139j1M51iRmUY839Y25ET4jDRscT081oGb+rLnywLjLSrIQx6MkqNBhCFbxqY1YmoGZVORW/QMGRm/lIRcy/+ytunLDm+e8jOW7xfcSayxDmzpAAAAAjJclj04kifG7PRApFI4NgwtaE5na/xCEBI572Nvp+FkAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAbd9uHXZaGT2cvhRs7reawctIXtX1s3kTqM9YV+/wCpBHnVW/IxwG7udMVuzmgVB/2xst6j9I5RArHNola8E4+0P/on9df2SnTAmx8pWHneSwmrNt/J3VFLMhqns4zl6JmXkZ+niuxMhAGrmKBaBo94uMv2Sl+Xh3i+VOO0m5BdNZ1ElenbwQylHQY+VW1ydG1MaUEeNpG+EVgswzPMwPoLBgAFAsBcFQAGAAkDQA0DAAAAAAAHBgABAhMICQAHBgADABYICQEBCAIAAwwCAAAAUEYVOwAAAAAJAQMBEQoUCQADBAETCgsKFw0ODxARAwQACRQj5RfLl3rjrSoBAAAAQ2QAAVBGFTsAAAAAyYZnBwAAAABkAAAJAwMAAAEJDAkAAAIBBBMVCQjGASBMKQwnooTbKNxdBwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAUHTKomh4KXvNgA0ovYKS5F8GIOBgAAAAAAAAAAAAAAAAAQgAAAAAAAAAAAAAAAAAAAAAAAEIF7RFOAwAAAAAAAAAAAAAAaAIAAAAAAAC4CwAAAAAAAOAA2mcAAAAAAAAAAAAAAAAAAAAApapuIXG0FuHSfsU8qME9s/kaic0AAwGCsZdSuxV5eCm+Ria4LEQPgTg4bg65gNrTAefEzpAfPQgCABIMAgAAAAAAAAAAAAAACAIABQwCAAAAsIOFAAAAAAADWk6DVOZO8lMFQg2r0dgfltD6tRL/B1hH3u00UzZdgqkAAxEqIPdq2eRt/F6mHNmFe7iwZpdrtGmHNJMFlK7c6Bc6k6kjBezr6u/tAgvu3OGsJSwSElmcOHZ21imqH/rhJ2KgqDJdBPFH4SYIM1kBAAA=",
            },
          },
          "scope": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp",
        },
      },
      "snapId": "test-snap",
    },
  ],
  Array [
    "BridgeController:trackUnifiedSwapBridgeEvent",
    "Unified SwapBridge Snap Confirmation Page Viewed",
    Object {},
  ],
  Array [
    "AccountsController:getSelectedMultichainAccount",
  ],
  Array [
    "AccountsController:getAccountByAddress",
    "0x123...",
  ],
  Array [
    "BridgeController:trackUnifiedSwapBridgeEvent",
    "Unified SwapBridge Submitted",
    Object {
      "action_type": "crosschain-v1",
      "actual_time_minutes": 0,
      "allowance_reset_transaction": undefined,
      "approval_transaction": undefined,
      "chain_id_destination": "eip155:1",
      "chain_id_source": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp",
      "custom_slippage": true,
      "destination_transaction": "PENDING",
      "error_message": "error_message",
      "gas_included": false,
      "is_hardware_wallet": false,
      "price_impact": 0,
      "provider": "test-bridge_test-bridge",
      "quote_vs_execution_ratio": 1,
      "quoted_time_minutes": 5,
      "quoted_vs_used_gas_ratio": 1,
      "security_warnings": Array [],
      "slippage_limit": 0,
      "source_transaction": "COMPLETE",
      "stx_enabled": false,
      "swap_type": "crosschain",
      "token_address_destination": "eip155:1/slip44:60",
      "token_address_source": "eip155:1399811149/slip44:501",
      "token_symbol_destination": "ETH",
      "token_symbol_source": "SOL",
      "usd_actual_gas": 5,
      "usd_actual_return": 1000,
      "usd_amount_source": 100,
      "usd_quoted_gas": 5,
      "usd_quoted_return": 1000,
    },
  ],
]
`;

exports[`BridgeStatusController submitTx: Solana should successfully submit a Solana transaction 2`] = `
Object {
  "approvalTxId": undefined,
  "chainId": "0x416edef1601be",
  "destinationChainId": "0x1",
  "destinationTokenAddress": "0x...",
  "destinationTokenAmount": "0.5",
  "destinationTokenDecimals": 18,
  "destinationTokenSymbol": "ETH",
  "hash": "signature",
  "id": "test-uuid-1234",
  "isBridgeTx": true,
  "isSolana": true,
  "networkClientId": "test-snap",
  "origin": "test-snap",
  "sourceTokenAddress": "native",
  "sourceTokenAmount": "1000000000",
  "sourceTokenDecimals": 9,
  "sourceTokenSymbol": "SOL",
  "status": "submitted",
  "swapTokenValue": "1",
  "time": 1234567890,
  "txParams": Object {
    "data": "AQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAAQAHDXLY8oVRIwA8ZdRSGjM5RIZJW8Wv+Twyw3NqU4Hov+OHoHp/dmeDvstKbICW3ezeGR69t3/PTAvdXgZVdJFJXaxkoKXUTWfEAyQyCCG9nwVoDsd10OFdnM9ldSi+9SLqHpqWVDV+zzkmftkF//DpbXxqeH8obNXHFR7pUlxG9uNVOn64oNsFdeUvD139j1M51iRmUY839Y25ET4jDRscT081oGb+rLnywLjLSrIQx6MkqNBhCFbxqY1YmoGZVORW/QMGRm/lIRcy/+ytunLDm+e8jOW7xfcSayxDmzpAAAAAjJclj04kifG7PRApFI4NgwtaE5na/xCEBI572Nvp+FkAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAbd9uHXZaGT2cvhRs7reawctIXtX1s3kTqM9YV+/wCpBHnVW/IxwG7udMVuzmgVB/2xst6j9I5RArHNola8E4+0P/on9df2SnTAmx8pWHneSwmrNt/J3VFLMhqns4zl6JmXkZ+niuxMhAGrmKBaBo94uMv2Sl+Xh3i+VOO0m5BdNZ1ElenbwQylHQY+VW1ydG1MaUEeNpG+EVgswzPMwPoLBgAFAsBcFQAGAAkDQA0DAAAAAAAHBgABAhMICQAHBgADABYICQEBCAIAAwwCAAAAUEYVOwAAAAAJAQMBEQoUCQADBAETCgsKFw0ODxARAwQACRQj5RfLl3rjrSoBAAAAQ2QAAVBGFTsAAAAAyYZnBwAAAABkAAAJAwMAAAEJDAkAAAIBBBMVCQjGASBMKQwnooTbKNxdBwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAUHTKomh4KXvNgA0ovYKS5F8GIOBgAAAAAAAAAAAAAAAAAQgAAAAAAAAAAAAAAAAAAAAAAAEIF7RFOAwAAAAAAAAAAAAAAaAIAAAAAAAC4CwAAAAAAAOAA2mcAAAAAAAAAAAAAAAAAAAAApapuIXG0FuHSfsU8qME9s/kaic0AAwGCsZdSuxV5eCm+Ria4LEQPgTg4bg65gNrTAefEzpAfPQgCABIMAgAAAAAAAAAAAAAACAIABQwCAAAAsIOFAAAAAAADWk6DVOZO8lMFQg2r0dgfltD6tRL/B1hH3u00UzZdgqkAAxEqIPdq2eRt/F6mHNmFe7iwZpdrtGmHNJMFlK7c6Bc6k6kjBezr6u/tAgvu3OGsJSwSElmcOHZ21imqH/rhJ2KgqDJdBPFH4SYIM1kBAAA=",
    "from": "0x123...",
  },
  "type": "bridge",
}
`;

exports[`BridgeStatusController submitTx: Solana should successfully submit a Solana transaction 3`] = `
Object {
  "approvalTxId": undefined,
  "bridgeTxMeta": Object {
    "approvalTxId": undefined,
    "chainId": "0x416edef1601be",
    "destinationChainId": "0x1",
    "destinationTokenAddress": "0x...",
    "destinationTokenAmount": "0.5",
    "destinationTokenDecimals": 18,
    "destinationTokenSymbol": "ETH",
    "hash": "signature",
    "id": "test-uuid-1234",
    "isBridgeTx": true,
    "isSolana": true,
    "networkClientId": "test-snap",
    "origin": "test-snap",
    "sourceTokenAddress": "native",
    "sourceTokenAmount": "1000000000",
    "sourceTokenDecimals": 9,
    "sourceTokenSymbol": "SOL",
    "status": "submitted",
    "swapTokenValue": "1",
    "time": 1234567890,
    "txParams": Object {
      "data": "AQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAAQAHDXLY8oVRIwA8ZdRSGjM5RIZJW8Wv+Twyw3NqU4Hov+OHoHp/dmeDvstKbICW3ezeGR69t3/PTAvdXgZVdJFJXaxkoKXUTWfEAyQyCCG9nwVoDsd10OFdnM9ldSi+9SLqHpqWVDV+zzkmftkF//DpbXxqeH8obNXHFR7pUlxG9uNVOn64oNsFdeUvD139j1M51iRmUY839Y25ET4jDRscT081oGb+rLnywLjLSrIQx6MkqNBhCFbxqY1YmoGZVORW/QMGRm/lIRcy/+ytunLDm+e8jOW7xfcSayxDmzpAAAAAjJclj04kifG7PRApFI4NgwtaE5na/xCEBI572Nvp+FkAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAbd9uHXZaGT2cvhRs7reawctIXtX1s3kTqM9YV+/wCpBHnVW/IxwG7udMVuzmgVB/2xst6j9I5RArHNola8E4+0P/on9df2SnTAmx8pWHneSwmrNt/J3VFLMhqns4zl6JmXkZ+niuxMhAGrmKBaBo94uMv2Sl+Xh3i+VOO0m5BdNZ1ElenbwQylHQY+VW1ydG1MaUEeNpG+EVgswzPMwPoLBgAFAsBcFQAGAAkDQA0DAAAAAAAHBgABAhMICQAHBgADABYICQEBCAIAAwwCAAAAUEYVOwAAAAAJAQMBEQoUCQADBAETCgsKFw0ODxARAwQACRQj5RfLl3rjrSoBAAAAQ2QAAVBGFTsAAAAAyYZnBwAAAABkAAAJAwMAAAEJDAkAAAIBBBMVCQjGASBMKQwnooTbKNxdBwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAUHTKomh4KXvNgA0ovYKS5F8GIOBgAAAAAAAAAAAAAAAAAQgAAAAAAAAAAAAAAAAAAAAAAAEIF7RFOAwAAAAAAAAAAAAAAaAIAAAAAAAC4CwAAAAAAAOAA2mcAAAAAAAAAAAAAAAAAAAAApapuIXG0FuHSfsU8qME9s/kaic0AAwGCsZdSuxV5eCm+Ria4LEQPgTg4bg65gNrTAefEzpAfPQgCABIMAgAAAAAAAAAAAAAACAIABQwCAAAAsIOFAAAAAAADWk6DVOZO8lMFQg2r0dgfltD6tRL/B1hH3u00UzZdgqkAAxEqIPdq2eRt/F6mHNmFe7iwZpdrtGmHNJMFlK7c6Bc6k6kjBezr6u/tAgvu3OGsJSwSElmcOHZ21imqH/rhJ2KgqDJdBPFH4SYIM1kBAAA=",
      "from": "0x123...",
    },
    "type": "bridge",
  },
  "isStxEnabled": false,
  "quoteResponse": Object {
    "adjustedReturn": Object {
      "usd": "985",
      "valueInCurrency": "985",
    },
    "cost": Object {
      "usd": "15",
      "valueInCurrency": "15",
    },
    "estimatedProcessingTimeInSeconds": 300,
    "gasFee": Object {
      "amount": "0.05",
      "usd": "5",
      "valueInCurrency": "5",
    },
    "quote": Object {
      "bridgeId": "test-bridge",
      "bridges": Array [
        "test-bridge",
      ],
      "destAsset": Object {
        "address": "0x...",
        "assetId": "eip155:1/slip44:60",
        "chainId": 1,
        "decimals": 18,
        "name": "Ethereum",
        "symbol": "ETH",
      },
      "destChainId": 1,
      "destTokenAmount": "0.5",
      "feeData": Object {
        "metabridge": Object {
          "amount": "1000000",
          "asset": Object {
            "address": "native",
            "assetId": "eip155:1399811149/slip44:501",
            "chainId": 1151111081099710,
            "decimals": 9,
            "name": "Solana",
            "symbol": "SOL",
          },
        },
      },
      "requestId": "123",
      "srcAsset": Object {
        "address": "native",
        "assetId": "eip155:1399811149/slip44:501",
        "chainId": 1151111081099710,
        "decimals": 9,
        "name": "Solana",
        "symbol": "SOL",
      },
      "srcChainId": 1151111081099710,
      "srcTokenAmount": "1000000000",
      "steps": Array [
        Object {
          "action": "bridge",
          "destAmount": "0.5",
          "destAsset": Object {
            "address": "0x...",
            "assetId": "eip155:1/slip44:60",
            "chainId": 1,
            "decimals": 18,
            "name": "Ethereum",
            "symbol": "ETH",
          },
          "destChainId": 1,
          "protocol": Object {
            "displayName": "Test Protocol",
            "icon": "test-icon",
            "name": "test-protocol",
          },
          "srcAmount": "1000000000",
          "srcAsset": Object {
            "address": "native",
            "assetId": "eip155:1399811149/slip44:501",
            "chainId": 1151111081099710,
            "decimals": 9,
            "name": "Solana",
            "symbol": "SOL",
          },
          "srcChainId": 1151111081099710,
        },
      ],
    },
    "sentAmount": Object {
      "amount": "1",
      "usd": "100",
      "valueInCurrency": "100",
    },
    "swapRate": "0.5",
    "toTokenAmount": Object {
      "amount": "0.5",
      "usd": "1000",
      "valueInCurrency": "1000",
    },
    "totalMaxNetworkFee": Object {
      "amount": "0.15",
      "usd": "15",
      "valueInCurrency": "15",
    },
    "totalNetworkFee": Object {
      "amount": "0.1",
      "usd": "10",
      "valueInCurrency": "10",
    },
    "trade": "AQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAAQAHDXLY8oVRIwA8ZdRSGjM5RIZJW8Wv+Twyw3NqU4Hov+OHoHp/dmeDvstKbICW3ezeGR69t3/PTAvdXgZVdJFJXaxkoKXUTWfEAyQyCCG9nwVoDsd10OFdnM9ldSi+9SLqHpqWVDV+zzkmftkF//DpbXxqeH8obNXHFR7pUlxG9uNVOn64oNsFdeUvD139j1M51iRmUY839Y25ET4jDRscT081oGb+rLnywLjLSrIQx6MkqNBhCFbxqY1YmoGZVORW/QMGRm/lIRcy/+ytunLDm+e8jOW7xfcSayxDmzpAAAAAjJclj04kifG7PRApFI4NgwtaE5na/xCEBI572Nvp+FkAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAbd9uHXZaGT2cvhRs7reawctIXtX1s3kTqM9YV+/wCpBHnVW/IxwG7udMVuzmgVB/2xst6j9I5RArHNola8E4+0P/on9df2SnTAmx8pWHneSwmrNt/J3VFLMhqns4zl6JmXkZ+niuxMhAGrmKBaBo94uMv2Sl+Xh3i+VOO0m5BdNZ1ElenbwQylHQY+VW1ydG1MaUEeNpG+EVgswzPMwPoLBgAFAsBcFQAGAAkDQA0DAAAAAAAHBgABAhMICQAHBgADABYICQEBCAIAAwwCAAAAUEYVOwAAAAAJAQMBEQoUCQADBAETCgsKFw0ODxARAwQACRQj5RfLl3rjrSoBAAAAQ2QAAVBGFTsAAAAAyYZnBwAAAABkAAAJAwMAAAEJDAkAAAIBBBMVCQjGASBMKQwnooTbKNxdBwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAUHTKomh4KXvNgA0ovYKS5F8GIOBgAAAAAAAAAAAAAAAAAQgAAAAAAAAAAAAAAAAAAAAAAAEIF7RFOAwAAAAAAAAAAAAAAaAIAAAAAAAC4CwAAAAAAAOAA2mcAAAAAAAAAAAAAAAAAAAAApapuIXG0FuHSfsU8qME9s/kaic0AAwGCsZdSuxV5eCm+Ria4LEQPgTg4bg65gNrTAefEzpAfPQgCABIMAgAAAAAAAAAAAAAACAIABQwCAAAAsIOFAAAAAAADWk6DVOZO8lMFQg2r0dgfltD6tRL/B1hH3u00UzZdgqkAAxEqIPdq2eRt/F6mHNmFe7iwZpdrtGmHNJMFlK7c6Bc6k6kjBezr6u/tAgvu3OGsJSwSElmcOHZ21imqH/rhJ2KgqDJdBPFH4SYIM1kBAAA=",
  },
  "slippagePercentage": 0,
  "startTime": 1234567890,
  "statusRequest": Object {
    "bridge": "test-bridge",
    "bridgeId": "test-bridge",
    "destChainId": 1,
    "quote": Object {
      "bridgeId": "test-bridge",
      "bridges": Array [
        "test-bridge",
      ],
      "destAsset": Object {
        "address": "0x...",
        "assetId": "eip155:1/slip44:60",
        "chainId": 1,
        "decimals": 18,
        "name": "Ethereum",
        "symbol": "ETH",
      },
      "destChainId": 1,
      "destTokenAmount": "0.5",
      "feeData": Object {
        "metabridge": Object {
          "amount": "1000000",
          "asset": Object {
            "address": "native",
            "assetId": "eip155:1399811149/slip44:501",
            "chainId": 1151111081099710,
            "decimals": 9,
            "name": "Solana",
            "symbol": "SOL",
          },
        },
      },
      "requestId": "123",
      "srcAsset": Object {
        "address": "native",
        "assetId": "eip155:1399811149/slip44:501",
        "chainId": 1151111081099710,
        "decimals": 9,
        "name": "Solana",
        "symbol": "SOL",
      },
      "srcChainId": 1151111081099710,
      "srcTokenAmount": "1000000000",
      "steps": Array [
        Object {
          "action": "bridge",
          "destAmount": "0.5",
          "destAsset": Object {
            "address": "0x...",
            "assetId": "eip155:1/slip44:60",
            "chainId": 1,
            "decimals": 18,
            "name": "Ethereum",
            "symbol": "ETH",
          },
          "destChainId": 1,
          "protocol": Object {
            "displayName": "Test Protocol",
            "icon": "test-icon",
            "name": "test-protocol",
          },
          "srcAmount": "1000000000",
          "srcAsset": Object {
            "address": "native",
            "assetId": "eip155:1399811149/slip44:501",
            "chainId": 1151111081099710,
            "decimals": 9,
            "name": "Solana",
            "symbol": "SOL",
          },
          "srcChainId": 1151111081099710,
        },
      ],
    },
    "refuel": false,
    "srcChainId": 1151111081099710,
    "srcTxHash": "signature",
  },
}
`;

exports[`BridgeStatusController wipeBridgeStatus wipes the bridge status for the given address 1`] = `
Array [
  Array [
    "AccountsController:getSelectedMultichainAccount",
  ],
  Array [
    "AccountsController:getSelectedMultichainAccount",
  ],
  Array [
    "NetworkController:getState",
  ],
  Array [
    "NetworkController:getNetworkClientById",
    "networkClientId",
  ],
]
`;
